--- a/Movie_App/style.css
+++ b/Movie_App/style.css
@@ -162,3 +162,17 @@ p{
     }
 
 }
+
+@media screen and (max-width: 300px){
+    .search-container{
+        display: flex;
+        flex-direction: column;
+    }
+    .search-container input{
+        border-radius: 11px;
+    }
+    .search-container button{
+        padding: .3rem 0;
+    }
+    
+}
